3516
```scala
scala> case class C(a: Any)
defined class C

scala> (new C(())) match {
     |    case C =>
     | }
<console>:9: error: pattern type is incompatible with expected type;
 found   : object C
 required: C
          case C =>
               ^
```

Suggested type diagnostics:

"Note: you referred to the companion object of the class C. Perhaps you meant '_ : C' or 'C(_)'
